using ahref with button

--- a/Challenges/kids_street_clothes/index.html
+++ b/Challenges/kids_street_clothes/index.html
@@ -70,7 +70,9 @@
             </p>
           </div>
           <div class="aboutus_child_btn">
-            <button>About us</button>
+            <a href="#">
+              <button>About us</button>
+            </a>
           </div>
         </div>
       </div>
@@ -110,7 +112,11 @@
           </div>
           <div class="menuwithimages_items_each">
             <div class="menuwithimages_items_each_imgHandler">
-              <img src="./assets/images/Knnitted_Cardigan.webp" width="250" alt="" />
+              <img
+                src="./assets/images/Knnitted_Cardigan.webp"
+                width="250"
+                alt=""
+              />
             </div>
             <div class="menuwithimages_items_each_title">
               <h2>Knnitted Cardigan</h2>
