integrating second challenge in the main page && completion cosmetic project (second challenge)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             >
           </div>
         </div>
+        <div class="grid_child_each">
+          <div class="grid_child_each_img">
+            <img
+              src="./Challenges/cosmetic_products/assets/images/project.png"
+              alt=""
+            />
+          </div>
+          <div class="grid_child_each_link">
+            <a
+              href="./Challenges/cosmetic_products/index.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Cosmetic</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
