fixing and updating styles forgot to reset zoom in window to 100%

--- a/Challenges/cosmetic_products/index.html
+++ b/Challenges/cosmetic_products/index.html
@@ -72,7 +72,7 @@
             <a href="#"><button>Brightening Serum</button></a>
           </div>
         </div>
-        <div class="products-grid-each best-seller">
+        <div class="products-grid-each middle">
           <div class="products-grid-each-imghandler sec">
             <img src="./assets/images/face.png" alt="" />
           </div>
